# python-backend-hse-spb-2022

./: README.md  databases.md  pyproject.toml
app/: client.py  contracts.py  exprEval.py  main.py  routers.py  server.py
app/proto/: services.proto
app/tests/: EvalTest.py
